# bikeshed-wagtail

./: .gitignore  Dockerfile  docker-compose.env  docker-compose.env.example  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/workflows/: ci.yml
app/: conftest.py  pytest.ini
app/assets/: main.css
app/assets/_dev/scss/: _colours.scss  _globals.scss  _mixins.scss  _pagination.scss  _search.scss  _typography.scss  screen.scss
app/config/: assets.py  urls.py  wsgi.py
app/config/settings/: base.py  dev.py  test.py
app/modules/authors/: models.py  views.py  wagtail_hooks.py
app/modules/authors/migrations/: 0001_initial.py
app/modules/authors/tests/: factories.py  fixtures.py  test_author_autocomplete.py
app/modules/blog_posts/: models.py
app/modules/blog_posts/migrations/: 0001_initial.py  0002_auto_20200707_1437.py  0003_blogpost_authors.py
app/modules/blog_posts/tests/: factories.py  fixtures.py  test_blog_post.py  test_blog_post_index.py
app/modules/core/models/: abstract.py
app/modules/core/test/: factories.py
app/modules/home/tests/: fixtures.py
app/modules/search/templates/search/: search.html
app/templates/: base.html
app/templates/blog_posts/: _meta.html  _tags.html  blog_post.html  blog_post_index_page.html
assets/sass/: screen.scss
script/: build_assets  cibuild  manpy  server  test  update
